--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body onkeyup="handleKey(event)" onload="initGame()">
   <h1>Collect The Balls</h1>
+  <h3>score: </h3>
+  <p class="score">0</p>
   <table>
     <tbody class="board"></tbody>
   </table>
