--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <table>
     <tbody class="board"></tbody>
   </table>
+  <button onclick="resetGame()">Restart</button>
   <script src="js/app.js"></script>
   <script src="js/util.js"></script>
 </body>
